# pybox

./: .gitignore  README.md  build.gradle  debug.keystore  gradle.properties  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/khan/pybox/: BrowserActivity.kt  DbViewerActivity.kt  FileExplorerActivity.kt  LlamaEngineService.kt  MainActivity.kt  NotificationHelper.kt  PyBoxWorker.kt  SecureKeyManager.kt
app/src/main/python/: auth.py  backend_app.py  browser.py  config.py  contacts.py  encryption.py  error_manager.py  plugin_loader.py  scheduler.py  scraper.py  usage_stats.py  watcher.py
app/src/main/res/layout/: activity_browser.xml  activity_db_viewer.xml  activity_file_explorer.xml  activity_file_viewer.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
final/: TECHNICAL_REPORT.md
final/.github/workflows/: build-apk.yml  tests.yml
final/app/src/main/java/com/khan/pybox/: BrowserActivity.kt  FileExplorerActivity.kt  FileViewerActivity.kt  MainActivity.kt  UsageStatsHelper.kt
final/app/src/main/python/: agent.py  appstate.py  backend_app.py  browser.py  config.py  connectors.py  contacts.py  dbcore.py  encryption.py  error_manager.py  executor.py  gdrive.py  global_search.py  intelligence.py  osint_tools.py  plugin_loader.py  routes_admin.py  routes_agent.py  routes_automation.py  routes_browser.py  routes_connectors.py  routes_contacts.py  routes_core.py  routes_drive.py  routes_encryption.py  routes_plugins.py  routes_scrape_osint.py  routes_scripts.py  routes_search.py  routes_settings.py  routes_usage.py  scheduler.py  scraper.py  scripts_runner.py  search_engine.py  theme.py  usage_stats.py  watcher.py
final/app/src/main/python/static/: app.css  app.js
final/app/src/main/res/layout/: activity_browser.xml  activity_file_explorer.xml  activity_main.xml
final/tests/: conftest.py  requirements-test.txt  test_admin_extras.py  test_agent.py  test_auth.py  test_backup.py  test_connectors.py  test_intelligence.py  test_pages.py  test_scraper.py  test_scripts.py  test_scripts_runner_unit.py  test_search.py  test_theme.py
plugins-examples/: auto_summarize.py  battery_guard.py  notes_search.py  osint_report.py  web_watch.py
